--- a/Module 1 Python Basics/Basics of Python.ipynb
+++ b/Module 1 Python Basics/Basics of Python.ipynb
@@ -165,6 +165,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "140.5 min\n",
+      "7200 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Storing Values\n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "c = a+b\n",
+    "print(c)\n",
+    "\n",
+    "#convert 02h 20m 30s to total mins\n",
+    "total_min = 2*60+20+30/60\n",
+    "print(total_min,'min')\n",
+    "\n",
+    "#convert 2 hrs into seconds\n",
+    "\n",
+    "hrs = 2\n",
+    "sec_hrs = 60*60\n",
+    "sec = hrs * sec_hrs\n",
+    "print(sec,'seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
