--- a/Module 1 Python Basics/Basics of Python.ipynb
+++ b/Module 1 Python Basics/Basics of Python.ipynb
@@ -200,10 +200,157 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "hello\n",
+      "\n",
+      "\n",
+      "e\n",
+      "llo wo\n",
+      "hlowrd\n",
+      "w o\n",
+      "\n",
+      "\n",
+      "hello Mate\n",
+      "\n",
+      "\n",
+      "hello worldhello worldhello world\n",
+      "My Name is Tanmoy Munshi\n",
+      "\n",
+      "\n",
+      "HELLO WORLD\n",
+      "hello world\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#String operation\n",
+    "\n",
+    "print('hello')\n",
+    "print(\"hello\")\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "a = 'hello world'\n",
+    "print(a[1])\n",
+    "print(a[2:8])\n",
+    "print(a[::2]) #printng charcter with a space of 2\n",
+    "print(a[-5:-8:-1])\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "#length of string\n",
+    "\n",
+    "len(a)\n",
+    "print(a[:5],'Mate')\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "#replicate String\n",
+    "print(3*a)\n",
+    "\n",
+    "first_name = 'Tanmoy'\n",
+    "last_name = 'Munshi'\n",
+    "print('My Name is',first_name,last_name)\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "#lower case to upper case\n",
+    "print(a.upper()) #for upper case\n",
+    "\n",
+    "print(a.lower()) #for lower case\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "#replace a string\n",
+    "a = 'this is a dog'\n",
+    "a.replace('dog','cat')\n",
+    "\n",
+    "\n",
+    "#finding string\n",
+    "a.find('i')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02468\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#EXAMPLES\n",
+    "\n",
+    "#find even nos of a = \"0123456789\"\n",
+    "a = \"0123456789\"\n",
+    "\n",
+    "#find the 1 in a\n",
+    "print(a[::2])\n",
+    "a.find('1')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
