--- a/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
+++ b/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "5"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "(5,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,31 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "b[0] = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([100. ,   5.7,   2.4,   4.2])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
    ]
   },
   {
@@ -240,10 +220,30 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 2])"
+       "array([100. ,   5.7,   2.4,   4.2])"
       ]
      },
      "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2])"
+      ]
+     },
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "array([-2, -5])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "[-2, -2]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "[2, 4]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
        "array([10,  6])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "16"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "array([2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,16 +447,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.141592653589793"
+       "5"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "array([0.0000000e+00, 1.0000000e+00, 1.2246468e-16])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "array([-2., -1.,  0.,  1.,  2.])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,16 +524,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0xe5d2f3b240>]"
+       "[<matplotlib.lines.Line2D at 0x3ef63982e8>]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
        "array([ 1, -1])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "0"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +615,7 @@
        "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +659,7 @@
        "2"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "(3, 3)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
        "9"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "array([3, 6])"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,7 @@
        "       [15, 17, 19]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "       [30, 34, 38]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
        "       [450, 578, 722]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,10 +833,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 658,  824],\n",
+       "       [2578, 3320],\n",
+       "       [5794, 7544]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix Multiplication with different dimensions use DOT operator\n",
+    "F = np.array([[1,2],[3,4],[5,6]])\n",
+    "L = np.dot(E,F)\n",
+    "L"
+   ]
   },
   {
    "cell_type": "code",
