--- a/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
+++ b/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
@@ -858,10 +858,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12, 11, 12, 11])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,0,1,0])\n",
+    "b = np.array([0,1,0,1])\n",
+    "a+11"
+   ]
   },
   {
    "cell_type": "code",
