--- a/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
+++ b/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
@@ -889,10 +889,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Name = \"Michael Jackson\"\n",
+    "Name.find('el')"
+   ]
   },
   {
    "cell_type": "code",
