--- a/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
+++ b/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
@@ -910,17 +910,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1', '2', '3', '4']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'1,2,3,4'.split(',')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'a', 2, 1, 'd']"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A=[1,'a'] \n",
+    "B=[2,1,'d']\n",
+    "A+B\n"
+   ]
   },
   {
    "cell_type": "code",
