--- a/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
+++ b/Module 5 Working with Numpy Arrays/Working with Numpy Arrays.ipynb
@@ -952,17 +952,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'B', 'C'}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V={'A','B','C'}\n",
+    "V.add('C')\n",
+    "V"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for n in range(3):\n",
+    "    print(n+1)\n"
+   ]
   },
   {
    "cell_type": "code",
